# k8sPlayground

./: .dockerignore  .env  Dockerfile  deployment-k8s.yaml  docker-compose.yaml  main.py  pyproject.toml
nginx/: app.conf
